--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
 </head>
 <body>
     
@@ -54,7 +55,9 @@
             <div class="container">
                 <div class="landing_page_header_container">
                     <h5>ANOMALY DETECTION SERVICE</h5>
-                    <h2>Understand Your Hardware <br> Issues, Ahead of Anyone</h2>
+                    <h2>Understand Your Hardware Issues, 
+                    <br> 
+                    Ahead of Anyone</h2>
                     <div class="cta_wrapper">
                         <a href="#" class="btn btn-big">TRY IT FOR FREE</a>
                         <span class="shadow"></span>
