--- a/start-anomaly-detection.html
+++ b/start-anomaly-detection.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
 </head>
 <body>
 
@@ -78,6 +79,16 @@
                             <span class="text_nav"><i class="fa fa-file-text-o"></i>Record History</span>
                           </a>
                         </li>
+                         <li>
+                          <hr />
+                        </li>
+                        <li>
+                          <a href="file-upload.html">
+                            <span class="fa fa-arrow-circle-right fa-nav" data-toggle="tooltip" data-placement="right" title="Anomaly Detection"></span>
+                            <span class="text_nav"><i class="fa fa-arrow-circle-right "></i>Anomaly Detection</span>
+                          </a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
@@ -88,10 +99,63 @@
         </div>
 
         <div class="main_container">
-            
-            <div class="start_anomalyDetection_wrapper">
-                <a href="file-upload.html" class="btn btn-blue btn-big">START ANOMALY DETECTION</a>
+
+
+            <div class="anomaly__feature-wrapper">
+                <div class="feature__container">
+                    <div class="feature__content">
+                        <span class="feature__image">
+                            <img src="images/1-file-upload.png" alt="">
+                        </span>
+                        <span class="feature__description">
+                            <h4>Upload File Server</h4>
+                            <p>Sample Content</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="feature__container">
+                    <div class="feature__content">
+                        <span class="feature__image">
+                            <img src="images/2-train-model.png" alt="">
+                        </span>
+                        <span class="feature__description">
+                            <h4>Train Model</h4>
+                            <p>Sample Content</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="feature__container">
+                    <div class="feature__content">
+                        <span class="feature__image">
+                            <img src="images/3-analyze.png" alt="">
+                        </span>
+                        <span class="feature__description">
+                            <h4>Analyze and Detect</h4>
+                            <p>Sample Content</p>
+                        </span>
+                    </div>
+                </div>
+                <div class="feature__container">
+                    <div class="feature__content">
+                        <span class="feature__image">
+                            <img src="images/4-report.png" alt="">
+                        </span>
+                        <span class="feature__description">
+                            <h4>RCA Report</h4>
+                            <p>Sample Content</p>
+                        </span>
+                    </div>
+                </div>
             </div>
+
+
+            <div class="start_anomalyDetection_wrapper">
+                <center>
+                    <a href="file-upload.html" class="btn btn-blue btn-big"><i class="fa fa-arrow-right"></i>  &nbsp;
+                    &nbsp;START ANOMALY DETECTION</a>
+                </center>
+            </div>
+
 
         </div>
     </div>
