--- a/results.html
+++ b/results.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
 </head>
 <body>
 
@@ -78,6 +79,15 @@
                             <span class="text_nav"><i class="fa fa-file-text-o"></i>Record History</span>
                           </a>
                         </li>
+                        <li>
+                          <hr />
+                        </li>
+                        <li>
+                          <a href="file-upload.html">
+                            <span class="fa fa-arrow-circle-right fa-nav" data-toggle="tooltip" data-placement="right" title="Anomaly Detection"></span>
+                            <span class="text_nav"><i class="fa fa-arrow-circle-right "></i>Anomaly Detection</span>
+                          </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -87,58 +97,73 @@
             </div>
         </div>
 
-        <div class="main_container">
-            <div class="onboarding_steps">
-                <div class="onboarding_prog"></div>
+        <div class="main_container" id="onboarding__steps">
+          <div class="onboarding_steps">
+            <div class="onboarding_prog"></div>
                 <ul>
                 <li class="active">
                     <label>STEP 1</label>
                     <a href="#"></a>
-                    <span>Upload & Train</span>
+                    <span>Upload Server File</span>
                 </li>
 
                 <li class="active">
                     <label>STEP 2</label>
                     <a href="#"></a>
-                    <span>Result Review</span>
+                    <span>Train Model</span>
+                </li>
+
+                <li class="active">
+                    <label>STEP 3</label>
+                    <a href="#"></a>
+                    <span>Analyze and Detect</span>
                 </li>
 
                 <li class="active active_step">
-                    <label>STEP 3</label>
+                    <label>Finished</label>
                     <a href="#"></a>
-                    <span>Root cause analysis and report output.</span>
+                    <span>Review Analysis Report</span>
                 </li>
               </ul>
+            </div>
+        </div>
+
+        <div class="main_container">
+
+          <div class="step__details">
+                <h3><strong>Finished</strong> <i class="fa  fa-chevron-right"></i> Review Analysis Report</h3>
+                <p>Here is the analysis report for the chosen incidents. You can view results based on Time Series View or Top Root Cause. To know more about Analysis Report, click here.</p>
+                <form class="form-inline analysis_select">
+                    <label class="mr-sm-2" for=""><strong>Set Model Name</strong> </label>
+                    <input type="text" class="mb-2 mr-sm-2 mb-sm-0" id="" value="Model 01" />
+                </form>
             </div>
 
             <div class="model_survey_section result_wrapper">
               
               <div class="trainNewModel_wrapper">
-                  <div class="modelname_heading">
-                    <h3>Model Name: Default Model Name</h3>
-                    <p>This is description of model name it will display here. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, deleniti.</p>
-                  </div>
-
                   <form class="form-inline analysis_select">
-                    <label class="mr-sm-2" for="inlineFormCustomSelect">Analysis time at</label>
+                    <label class="mr-sm-2" for="inlineFormCustomSelect">Viewing results for </label>
                     <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="inlineFormCustomSelect">
                       <option disabled>Choose time</option>
                       <option value="1" selected>1/25/2018 7:53:37 AM</option>
+                      <option disabled><hr/ ></option>
+                      <option disabled>See Previous Results</option>
+                      <option value="1" >1/23/2018 10:03:37 AM</option>
+
                     </select>
 
-                    <button type="submit" class="btn btn-blue">Show Incident</button>
                   </form>
               </div>
 
               <div class="collapse_holder">
-                <h3>[Analysis at : 1/25/2018 7:53:37 AM]</h3>
                 <!-- <a href="javascript:void(0)" class="collapse_all"><i class="fa fa-plus"></i> Collapse All</a> -->
               </div>
 
               <div class="table_result_wrapper">
                 <div class="table_connected_wrapper">
                   <div class="table_connected_header first-tab">
-                    <h5><strong>Incident: 1,</strong> 2018-7-01 08:20:00PM ~ 2018-7-01 09:30:00PM</h5>
+                    <h5><strong>Incident 1</strong> &nbsp; 2018-7-01 08:20:00PM ~ 2018-7-01 09:30:00PM</h5>
                   </div>
                   <div class="table_connected_body">
                     <ul class="nav nav-tabs" role="tablist">
@@ -250,7 +275,7 @@
 
                  <div class="table_connected_wrapper">
                   <div class="table_connected_header">
-                    <h5><strong>Incident: 2,</strong> 2018-7-01 08:20:00PM ~ 2018-7-01 09:30:00PM</h5>
+                    <h5><strong>Incident 2</strong> &nbsp; 2018-7-01 08:20:00PM ~ 2018-7-01 09:30:00PM</h5>
                   </div>
                   <div class="table_connected_body">
                     <ul class="nav nav-tabs" role="tablist">
@@ -361,25 +386,12 @@
               </div>
 
               <div class="cta_action_innerWrapper" id="cta_action_innerWrapper">
-                  <div class="pull-left">
-                    <a href="file-upload.html" class="btn btn-big"><i class="fa fa-upload"></i> FILE UPLOAD</a>
+                  <div class="pull-right">
+                    <button id="#" class="btn btn-big btn-success" >Finish and Save Results </button>
                   </div>
               </div>
 
             </div><!-- end of model_survey_section -->
-
-            <div class="progressbar_wrapper none">
-                <span>Scanning...</span>
-                <div class="progress">
-                  <!-- style="width: 67%;" --> 
-                  <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><!-- 67% --></div>
-                </div>
-
-                <div class="step_msg_wrapper">
-                    <h3>Step 1 </h3>
-                    <p><strong>Scanning  CSV file.</strong> The system now will scanning the csv file. It takes a several minute to analyze the files</p>
-                </div>
-            </div>
 
         </div>
     </div>
