--- a/view-results.html
+++ b/view-results.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
 </head>
 <body>
 
@@ -76,6 +77,15 @@
                           <a href="record-history.html">
                             <span class="fa fa-file-text-o fa-nav" data-toggle="tooltip" data-placement="right" title="Record History"></span>
                             <span class="text_nav"><i class="fa fa-file-text-o"></i>Record History</span>
+                          </a>
+                        </li>
+                         <li>
+                          <hr />
+                        </li>
+                        <li>
+                          <a href="file-upload.html">
+                            <span class="fa fa-arrow-circle-right fa-nav" data-toggle="tooltip" data-placement="right" title="Anomaly Detection"></span>
+                            <span class="text_nav"><i class="fa fa-arrow-circle-right "></i>Anomaly Detection</span>
                           </a>
                         </li>
                     </ul>
