fix css minor changes

--- a/start-anomaly-detection.html
+++ b/start-anomaly-detection.html
@@ -102,7 +102,9 @@
 
 
             <div class="anomaly__feature-wrapper">
+                <div class="flexbox_container_auto">
                 <div class="feature__container">
+                    <span class="badge">1</span>
                     <div class="feature__content">
                         <span class="feature__image">
                             <img src="images/1-file-upload.png" alt="">
@@ -114,6 +116,7 @@
                     </div>
                 </div>
                 <div class="feature__container">
+                    <span class="badge">2</span>
                     <div class="feature__content">
                         <span class="feature__image">
                             <img src="images/2-train-model.png" alt="">
@@ -125,6 +128,7 @@
                     </div>
                 </div>
                 <div class="feature__container">
+                    <span class="badge">3</span>
                     <div class="feature__content">
                         <span class="feature__image">
                             <img src="images/3-analyze.png" alt="">
@@ -136,6 +140,7 @@
                     </div>
                 </div>
                 <div class="feature__container">
+                    <span class="badge">4</span>
                     <div class="feature__content">
                         <span class="feature__image">
                             <img src="images/4-report.png" alt="">
@@ -145,6 +150,7 @@
                             <p>Sample Content</p>
                         </span>
                     </div>
+                </div>
                 </div>
             </div>
 
